--- a/css/styles.css
+++ b/css/styles.css
@@ -601,7 +601,7 @@ img {
 
 /*-----------------Footer----------------*/
 
-footer {
+.footer {
   display: flex;
   padding: 60px 0;
   background-color: var(--footer-bg-color);
@@ -760,3 +760,257 @@ footer {
   visibility: hidden;
   pointer-events: none;
 }
+
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-title-color);
+  margin-bottom: 12px;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+
+.input-wrap {
+  display: block;
+  position: relative;
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-lable {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.2;
+  letter-spacing: 0.01em;
+  color: var(--main-text-color);
+  margin-bottom: 4px;
+  display: block;
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 15px;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-form-input::after {
+  display: block;
+  background-color: var(--accent-color);
+  display: none;
+}
+
+.modal-form-input:: header {
+  display: block;
+}
+
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 10px;
+  padding-top: 15px;
+  resize: none;
+}
+
+.modal-comment::placeholder {
+  font-size: 12px;
+}
+
+.check-lable {
+  align-items: center;
+  display: flex;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}
+
+.icon-check {
+  border: 2px solid#000000;
+  border-radius: 2px;
+  width: 16px;
+  height: 15px;
+  margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.checkbox:checked + .check-lable > .icon-check {
+  background: var(--accent-color);
+  border: transparent;
+}
+
+.check-link {
+  color: var(--accent-color);
+  margin-left: 4px;
+}
+
+.input-wrap:hover .modal-form-icon,
+.input-wrap:focus .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+.btn-close:hover .modal-btn-open,
+.btn-close:focus .modal-btn-open {
+  fill: var(--accent-color);
+}
+
+.footer-form-input {
+  display: inline-block;
+  width: 358px;
+  height: 50px;
+  left: 815px;
+  top: 2787px;
+  background: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-form-field {
+  position: absolute;
+  width: 570px;
+  height: 86px;
+  left: 815px;
+  top: 2751px;
+}
+
+.footer-form {
+  width: 570px;
+  height: 86px;
+  left: 815px;
+  top: 2751px;
+}
+
+.footer-title {
+  justify-content: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-button {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: 0.06em;
+  text-align: center;
+  height: 50px;
+  width: 200px;
+  color: var(--secondary-title-color);
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  padding-top: auto;
+  padding-bottom: auto;
+}
+
+.footer-button {
+  width: 200px;
+  height: 50px;
+  left: 1185px;
+  top: 2787px;
+}
+
+.footer-tex-button {
+  width: 109px;
+  height: 30px;
+  left: 1214px;
+  top: 2797px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.form-icon {
+  fill: var(--secondary-title-color);
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  padding: 0 auto;
+  position: absolute;
+}
+
+.btn-footer {
+  width: 143px;
+  height: 30px;
+  left: 1214px;
+  top: 2797px;
+}
+
+.placeholder {
+  position: absolute;
+  width: 47px;
+  height: 20px;
+  left: 831px;
+  top: 2802px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.3;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  fill: var(--secondary-title-color);
+}
+
+/*.modal-form-input::placeholder {
+  color: var(--accent-color);
+}*/
+
+/*.check-lable {
+  align-items: center;
+  display: flex;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+}*/
+
+/*.check-lable::before {
+  content: '';
+  display: block;
+  border: 2px solid#000000;
+  border-radius: 2px;
+  width: 16px;
+  height: 15px;
+  margin-right: 5px;
+}*/
+
+/*.checkbox:checked + .check-lable::before {
+  background: var(--accent-color);
+  background-image: url(../images/checked.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border: none;
+}*/
