--- a/css/styles.css
+++ b/css/styles.css
@@ -718,6 +718,10 @@ img {
   margin-right: 10px;
 }
 
+.footer-address-socials {
+  margin-right: 93px;
+}
+
 /*-----------------Modal----------------*/
 
 .backdrop {
@@ -771,14 +775,6 @@ img {
   margin-bottom: 12px;
 }
 
-.modal-form-input {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-left: 42px;
-}
-
 .input-wrap {
   display: block;
   position: relative;
@@ -812,7 +808,7 @@ img {
   display: none;
 }
 
-.modal-form-input:: header {
+.modal-form-input::header {
   display: block;
 }
 
@@ -857,6 +853,7 @@ img {
 }
 
 .check-link {
+  text-decoration: underline;
   color: var(--accent-color);
   margin-left: 4px;
 }
@@ -864,11 +861,13 @@ img {
 .input-wrap:hover .modal-form-icon,
 .input-wrap:focus .modal-form-icon {
   fill: var(--accent-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-close:hover .modal-btn-open,
 .btn-close:focus .modal-btn-open {
   fill: var(--accent-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-form-input {
@@ -882,14 +881,65 @@ img {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+  margin: 0;
+}
+
+.footer-form-input {
+  right: 20px;
+}
+
+.modal-form-input:focus {
+  border: var(--accent-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+}
+
+.modal-form-input:focus {
+  border: 1px solid #2196f3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  outline: var(--accent-color);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-comment:focus {
+  border: 1px solid #2196f3;
+  box-sizing: border-box;
+  border-radius: 4px;
+  outline: var(--accent-color);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input:focus {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: var(--main-text-color);
+  transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input {
+  color: var(--secondary-title-color);
 }
 
 .footer-form-field {
-  position: absolute;
   width: 570px;
   height: 86px;
-  left: 815px;
-  top: 2751px;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .footer-form {
@@ -926,6 +976,7 @@ img {
   border-radius: 4px;
   padding-top: auto;
   padding-bottom: auto;
+  left: 12px;
 }
 
 .footer-button {
@@ -964,6 +1015,7 @@ img {
   height: 30px;
   left: 1214px;
   top: 2797px;
+  margin: 0;
 }
 
 .placeholder {
