Editing home work 6

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,7 @@ a {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--secondary-title-color);
+  margin-bottom: 30px;
 }
 
 .current {
@@ -235,7 +236,7 @@ a {
   margin-right: auto;
   align-items: center;
   border-radius: 4px;
-  margin-top: 30px;
+
   border-color: transparent;
   cursor: pointer;
   background: var(--accent-color);
@@ -477,13 +478,6 @@ img {
   border-radius: 4px;
 }
 
-/*.filter-item:hover {
-  background: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}*/
-
 .gallery-projects {
   padding-top: 20px;
   padding-bottom: 20px;
@@ -613,6 +607,7 @@ img {
 }
 
 .footer-address-contact {
+  flex-grow: 1;
   margin-right: 70px;
 }
 
@@ -748,14 +743,15 @@ img {
 }
 
 .btn-close {
+  cursor: pointer;
   width: 30px;
   height: 30px;
   border: 1px solid grey;
   background-color: unset;
   border-radius: 50%;
   position: absolute;
-  right: 5px;
-  top: 5px;
+  right: 8px;
+  top: 8px;
   transition: opacity 250ms, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -784,6 +780,10 @@ img {
   margin-bottom: 10px;
 }
 
+.modal-form-politics {
+  margin-bottom: 30px;
+}
+
 .modal-form-lable {
   font-weight: normal;
   font-size: 12px;
@@ -797,7 +797,6 @@ img {
 .modal-form-icon {
   position: absolute;
   left: 15px;
-  right: 15px;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -813,12 +812,15 @@ img {
 }
 
 .modal-comment {
+  display: block;
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 10px;
+  padding-right: 10px;
   padding-top: 15px;
+  padding-bottom: 15px;
   resize: none;
 }
 
@@ -827,6 +829,7 @@ img {
 }
 
 .check-lable {
+  justify-content: center;
   align-items: center;
   display: flex;
   font-weight: normal;
@@ -874,14 +877,12 @@ img {
   display: inline-block;
   width: 358px;
   height: 50px;
-  left: 815px;
-  top: 2787px;
   background: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin: 0;
+  margin-right: 12px;
 }
 
 .footer-form-input {
@@ -935,20 +936,6 @@ img {
   color: var(--secondary-title-color);
 }
 
-.footer-form-field {
-  width: 570px;
-  height: 86px;
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.footer-form {
-  width: 570px;
-  height: 86px;
-  left: 815px;
-  top: 2751px;
-}
-
 .footer-title {
   justify-content: center;
   font-weight: 700;
@@ -961,7 +948,7 @@ img {
 }
 
 .footer-button {
-  display: inline-block;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   font-size: 16px;
@@ -973,49 +960,15 @@ img {
   width: 200px;
   color: var(--secondary-title-color);
   background-color: var(--accent-color);
-  border-radius: 4px;
   padding-top: auto;
   padding-bottom: auto;
   left: 12px;
-}
-
-.footer-button {
-  width: 200px;
-  height: 50px;
-  left: 1185px;
-  top: 2787px;
-}
-
-.footer-tex-button {
-  width: 109px;
-  height: 30px;
-  left: 1214px;
-  top: 2797px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: #ffffff;
+  border: transparent;
 }
 
 .form-icon {
   fill: var(--secondary-title-color);
-  display: inline-block;
-  justify-content: center;
-  align-items: center;
   margin-left: 10px;
-  padding: 0 auto;
-  position: absolute;
-}
-
-.btn-footer {
-  width: 143px;
-  height: 30px;
-  left: 1214px;
-  top: 2797px;
-  margin: 0;
 }
 
 .placeholder {
