Adding cursor: pointer

--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,6 @@ a {
   margin-right: auto;
   align-items: center;
   border-radius: 4px;
-
   border-color: transparent;
   cursor: pointer;
   background: var(--accent-color);
@@ -948,6 +947,7 @@ img {
 }
 
 .footer-button {
+  cursor: pointer;
   display: inline-flex;
   justify-content: center;
   align-items: center;
